Bug 318280 - Selecting by pressing Enter doesn't work in MapViewWidget
Summary: Selecting by pressing Enter doesn't work in MapViewWidget
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Andrei Duma
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-13 09:01 UTC by Andrei Duma
Modified: 2023-04-08 11:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei Duma 2013-04-13 09:01:42 UTC
Map can be selected only by clicking on them. Using arrows the pressing Enter doesn't work.

Reproducible: Always

Steps to Reproduce:
1. Open Map View
2. Navigate through the items by using arrows
3. Press Enter
Actual Results:  
Nothing happens.

Expected Results:  
The map I pressed Enter on should have been selected.
Comment 1 Justin Zobel 2021-03-09 22:51:44 UTC
Thank you for the bug report.

As this report hasn't seen any changes in 5 years or more, we ask if you can please confirm that the issue still persists.

If this bug is no longer persisting or relevant please change the status to resolved.
Comment 2 Torsten Rahn 2023-04-08 11:14:45 UTC
Git commit 53ba5998a050b9abe07e5d2a1243b1df06c2ff36 by Torsten Rahn.
Committed on 08/04/2023 at 11:13.
Pushed by rahn into branch 'master'.

Fix: Selecting by pressing Enter doesn't work in MapViewWidget.

M  +2    -0    src/lib/marble/MapViewWidget.cpp

https://invent.kde.org/education/marble/commit/53ba5998a050b9abe07e5d2a1243b1df06c2ff36