Fix: Selecting by pressing Enter doesn't work in MapViewWidget.

BUG:318280